templates/deployment_sync_uploads.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sync-uploads
  namespace: "${namespace}"
  labels:
    app: sync-uploads
    app.kubernetes.io/instance: "${release-name}"
    app.kubernetes.io/name: sync-uploads
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sync-uploads
  template:
    metadata:
      labels:
        app: sync-uploads
    spec:
      securityContext:
        runAsGroup: "${run-as-user}"
        runAsNonRoot: false
        runAsUser: "${run-as-group}"
      containers:
        - name: mc
          image: minio/mc:latest
          command: ["sh", "-c"]
          args:
          - |
            mc alias set s3 https://s3.${s3-region}.amazonaws.com:443 "${aws_access_key_id}" "${aws_secret_access_key}"
            mc mirror --quiet --overwrite --watch /uploads/ s3"${s3-uploads-path}"
          volumeMounts:
            - name: uploads
              mountPath: /uploads
      volumes:
        - name: uploads
          persistentVolumeClaim: 
            claimName : "${uploads-claim}"
