templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: "${chart-name}"
  name: "${app-name}-ingress"
  namespace: "${namespace}"
  annotations:
    cert-manager.io/cluster-issuer: "${cluster-issuer}"
spec:
  rules:
  - host: "${endpoint-fqdn}"
    http:
      paths:
      - backend:
          service:
            name: "${app-name}-${chart-name}"
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "${endpoint-fqdn}"
    secretName: "${cluster-issuer}" # secret name, same as the privateKeySecretRef in the (Cluster)Issuer
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress-8443
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`"${endpoint-fqdn}"`)
      kind: Rule
      services:
        - name: "${app-name}-${chart-name}"
          port: 443
  field_manager:
    force_conflicts: true
