templates/network_policy_mariadb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
  name: "${release-name}-mariadb"
  namespace: "${namespace}"
spec:
  egress:
    - {}
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app.kubernetes.io/instance
                operator: In
                values:
                  - "${release-name}"
              - key: app.kubernetes.io/name
                operator: In
                values:
                  - wordpress
            matchLabels:
              app.kubernetes.io/instance: "${release-name}"
              app.kubernetes.io/name: wordpress
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: "${release-name}"
      app.kubernetes.io/name: mariadb
  policyTypes:
    - Ingress
    - Egress
