templates/network_policy_sync_uploads.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "${release_name}-sync-uploads"
  namespace: "${namespace}"
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - kube-system
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchExpressions:
              - key: k8s-app
                operator: In
                values:
                  - kube-dns
            matchLabels:
              k8s-app: kube-dns
    - ports:
        - port: 443
          protocol: TCP
      to:
%{ for i in s3_prefix_list ~}
        - ipBlock:            
            cidr: ${i}
%{ endfor ~}

  podSelector:
    matchLabels:
      app.kubernetes.io/instance: "${release_name}"
      app.kubernetes.io/name: sync-uploads
  policyTypes:
    - Ingress
    - Egress
