templates/network_policy_wordpress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "${release-name}-wordpress"
  namespace: "${namespace}"
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - kube-system
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchExpressions:
              - key: k8s-app
                operator: In
                values:
                  - kube-dns
            matchLabels:
              k8s-app: kube-dns
    - ports:
        - port: 3306
          protocol: TCP
      to:
        - podSelector:
            matchExpressions:
              - key: app.kubernetes.io/instance
                operator: In
                values:
                  - "${release-name}"
              - key: app.kubernetes.io/name
                operator: In
                values:
                  - mariadb
            matchLabels:
              app.kubernetes.io/instance: "${release-name}"
              app.kubernetes.io/name: mariadb
    - ports:
        - port: 587
          protocol: TCP
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
    - ports:
        - port: ${http_proxy_port}
          protocol: TCP
      to:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - ${http_proxy_namespace}
            matchLabels:
              kubernetes.io/metadata.name: ${http_proxy_namespace}
          podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - ${http_proxy_app}
            matchLabels:
              app: ${http_proxy_app}
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 8080
          protocol: TCP
        - port: 8443
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: "${release-name}"
      app.kubernetes.io/name: wordpress
  policyTypes:
    - Ingress
    - Egress
